<resources>
    <string name="app_name">Nyaay-SRMHack</string>
    <string name="username">599a63f8-d561-4840-910b-a301ea4957e6</string>
    <string name="password">OdzjOZr4ECff</string>
    <string name="workspace">28d9015c-cc6c-4b90-8108-6bab184df941</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="casestatus">Case Status</string>
    <string name="mycases">My Cases</string>
    <string name="more">More Info</string>
    <string name="party">Party</string>
    <string name="FilingNumber">Filing Number</string>
    <string name="fir">FIR Status</string>
    <string name="type">Type</string>
    <string name="causelist">Cause List</string>

    <string name="FACEBOOK_APP_ID">2021610788068986</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">06cfa7ba5b468d2c023c81ade6f5c3fd</string>
    <string name="permissions_receive_sms_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">Grant permission to read your SMS code from your device to pre-fill.</string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_get_accounts_title">a</string>
    <string name="permissions_get_accounts_message">b</string>
    <string name="permissions_read_phone_state_message">c</string>
    <string name="na">Na</string>
</resources>
