<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/status"
            android:icon="@drawable/casestatus"
            android:title="@string/casestatus" />
        <item
            android:id="@+id/mycase"
            android:icon="@drawable/mycase"
            android:title="@string/mycases" />
        <item
            android:id="@+id/moreinfo"
            android:icon="@drawable/more"
            android:title="@string/more" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
