<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rinkesh.nyaay_srmhack.Status">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/info"
                    android:layout_marginStart="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casestatus"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/party"
                    android:layout_marginStart="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/party"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/more"
                    android:layout_marginStart="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FilingNumber"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="FirClick">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/policeman"
                    android:layout_marginStart="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fir"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hammer"
                    android:layout_marginStart="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casestatus"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hammer"
                    android:layout_marginStart="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>




